--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
                 <li class="nav-item">
                 <a class="nav-link color-blanco" href="./pages/contacto.html">Contacto</a>
                 </li>
+                <!--MENÚ DESPLEGABLE-->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown
+                    <img src="./assets/img/menu.png" id="menu-desplegable">
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                  </li>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="./index.html">Home</a>
+                    <a class="dropdown-item" href="./pages/servicios.html">Servicios</a>
+                    <a class="dropdown-item" href="./pages/equipo.html">Equipo</a>
+                    <a class="dropdown-item" href="./pages/blog.html">Blog</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="./pages/contacto.html">Contacto</a>
+                </div>
+                </li>
             </ul>
         </div>
     </header>
@@ -90,12 +93,11 @@
         </div>
     </main>
     <footer class="contenedor-footer"> <!--Agregar NEWSLETTER y formas de pago-->
-        <div>
-            <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+            <div>
+            <a href="https://www.instagram.com/dk.interioresyespacios" class="color-blanco">dk.interioresyespacios</a>
             <br>
-            <a href="https://wa.link/8k9u4w">(3541)389085</a>
-            <p>dk.interioresyespacios@gmail.com</p>
-        </div>
+            <a href="https://wa.link/8k9u4w" class="color-blanco">(3541)389085</a>
+            <p class="color-blanco">dk.interioresyespacios@gmail.com</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
