--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -18,24 +18,37 @@
             <div class="container">
                 <ul class="nav">
                     <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home
+                    <a class="nav-link color-blanco" href="../index.html">Home
                         </a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./servicios.html">Servicios
+                    <a class="nav-link color-blanco" href="./servicios.html">Servicios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./equipo.html">Equipo
+                        <a class="nav-link color-blanco" href="./equipo.html">Equipo
                             </a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="./blog.html">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
-                        </li>
-                    </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link color-blanco" href="./blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link color-blanco" href="./contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="./assets/img/menu.png" id="menu-desplegable">
+                        </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="../index.html">Home</a>
+                        <a class="dropdown-item" href="./servicios.html">Servicios</a>
+                        <a class="dropdown-item" href="./equipo.html">Equipo</a>
+                        <a class="dropdown-item" href="./blog.html">Blog</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="./contacto.html">Contacto</a>
+                    </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
@@ -47,20 +60,39 @@
             <p class="subtitulo">Diseño y decoración de interiores y espacios</p>
             <div class="col-mg- col-lg-1"></div>
         </section>
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-lg-4"></div>
-                <div class="col-lg-4"></div>
-                <!--DISEÑAR COMO CARDS-->
-                    <ul class="contenido">
-                        <li>Hogar</li>
-                        <li>Oficinas / Locales</li>
-                        <li>Diseño de muebles</li>
-                        <li>Vidrieras</li>
-                        <li>Eventos sociales y empresariales</li>
-                    </ul>
+        <!--CARDS-->
+        <section>
+            <div class="container-fluid cards-servicios">
+                <div class="row d-flex justify-content-center">
+                    <div class="card d-flex justify-content-center col-sm-12 col-md-6 col-lg-3 col-xl-3 mb-5" id="menu__card__container">
+                        <img class="card-img-center" src="../assets/img/servicios/card-hogar.jpg" alt="Hogar">
+                        <div class="card-body">
+                            <h2 class="card-title">HOGAR</h2>
+                            <p class="card-text font-weight-normal">Diseñamos tus espacios como siempre los soñaste</p>
+                        </div>
+                    </div>
+                    <div class="card d-flex justify-content-center col-sm-12 col-md-6 col-lg-3 col-xl-3 mb-5" id="menu__card__container">
+                        <img class="card-img-center" src="../assets/img/servicios/card-oficinas.jpg" alt="Oficinas/Locales/Vidrieras">
+                        <div class="card-body">
+                            <h2 class="card-title font-weight-bold">OFICINAS</h2>
+                            <p class="card-text font-weight-normal">Tu lugar de trabajo o tu negocio a la medida de lo que estás buscando</p>
+                        </div>
+                    </div>
+                    <div class="card d-flex justify-content-center col-sm-12 col-md-6 col-lg-3 col-xl-3 mb-5" id="menu__card__container">
+                        <img class="card-img-center" src="../assets/img/servicios/card-muebles.jpg" alt="Diseño de muebles">
+                        <div class="card-body">
+                            <h2 class="card-title font-weight-bold">MUEBLES</h2>
+                            <p class="card-text font-weight-normal">Diseñamos cada detalle para aprovechar el espacio al máximo</p>
+                        </div>
+                    </div>
+                    <div class="card d-flex justify-content-center col-sm-12 col-md-6 col-lg-3 col-xl-3 mb-5" id="menu__card__container">
+                        <img class="card-img-center" src="../assets/img/servicios/card-eventos.jpg" alt="Eventos sociales y empresariales">
+                        <div class="card-body">
+                            <h2 class="card-title font-weight-bold">EVENTOS</h2>
+                            <p class="card-text font-weight-normal">Planificamos y decoramos tus momentos</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4"></div>
             </div>
         </section>
     </main>
@@ -72,6 +104,8 @@
             <p>dk.interioresyespacios@gmail.com</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
