Cambios en gral.

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </header>
-    <main  class="grilla__equipo">
+    <main  class="seccion__equipo">
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11">
@@ -62,24 +62,23 @@
             </div>
         </section>
         <br>
-        <section class="contenido__equipo">
-            <div class="contenido__equipo-foto">
-                <img src="../assets/img/equipo.jpg" alt="equipo" width="500px">
-                <!--NO FUNCIONÓ class="img-rounded"-->
-            </div>
+        <section class="container contenido__equipo">
+            <div class="row"></div>
             <div class="contenido__equipo--presentacion">
-                <h1>Melina y Daniela</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                <p class="subtitulo color-blanco">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus vel sed, commodi exercitationem harum atque, alias rem iusto, sint totam eius omnis? Eius est provident amet facere, dicta ab ducimus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus pariatur, quas rerum blanditiis sunt hic aperiam reiciendis autem porro labore ea distinctio maiores laboriosam optio numquam unde saepe adipisci nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reiciendis earum at beatae consequuntur tempora voluptate, impedit repudiandae laboriosam iusto corrupti. Similique ab, tenetur magni provident rerum debitis accusamus facere!</p>
+            </div>
+            <div class="contenido__equipo-foto">
+                <img src="../assets/img/equipo.jpg" class="img-rounded" alt="equipo" width="500px">
+                <!--NO FUNCIONÓ class="img-rounded"-->
             </div>
         </section>
     </main>
     <footer>
-        <div class="contenedor-footer">
-            <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
-            <br>
-            <a href="https://wa.link/8k9u4w">(3541)389085</a>
-            <p>dk.interioresyespacios@gmail.com</p>
-        </div>
+        <section>
+            <div class="contenedor-footer">
+                <span class="color-blanco">Copyright 2021 © dk.interiores</span>
+            </div>
+        </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
