--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             </div>
         </div>
     </main>
-    <footer class="contenedor-footer"> <!--Agregar NEWSLETTER y formas de pago-->
-            <div>
-            <a href="https://www.instagram.com/dk.interioresyespacios" class="color-blanco">dk.interioresyespacios</a>
-            <br>
-            <a href="https://wa.link/8k9u4w" class="color-blanco">(3541)389085</a>
-            <p class="color-blanco">dk.interioresyespacios@gmail.com</p>
+    <footer> <!--Agregar NEWSLETTER y formas de pago-->
+        <section>
+            <div class="contenedor-footer">
+                <span class="color-blanco">Copyright 2021 © dk.interiores</span>
+            </div>
+        </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
