--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!--INTRO A LA PÁGINA-->
         <div class="container">
             <div class="col-mg- col-lg-8">
-            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
+            <title class="titulo">DISEÑOS SIMPLES Y ELEGANTES</title>
             <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
             </div>
             <div class="col-mg- col-lg-2"></div>
