--- a/pages/blog.html
+++ b/pages/blog.html
@@ -56,7 +56,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-lg-11"></div>
-            <h1 class="titulo">¡TODOS LOS CONSEJOS QUE NECESITÁS!</h1>
+            <title class="titulo">¡TODOS LOS CONSEJOS QUE NECESITÁS!</title>
             <p class="subtitulo">En esta sección te contamos todos nuestros tips para que puedas integrar el diseño de interiores en tu día a día</p>
             <div class="col-lg-1"></div>
         </section>
