--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores / Equipo</title>
     <!--CSS-->
-    <!--CLASES CORREGIDAS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -56,7 +55,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11">
-                <h1 class="titulo">EL DETRÁS DE ESCENA</h1>
+                <title class="titulo">EL DETRÁS DE ESCENA</title>
                 <p class="subtitulo">Somos un estudio de diseño de interiores radicado en la ciudad de Villa Carlos Paz, Córdoba, Argentina.</p>
                 <div class="col-mg- col-lg-1"></div>
             </div>
@@ -68,8 +67,7 @@
                 <p class="subtitulo color-blanco">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus vel sed, commodi exercitationem harum atque, alias rem iusto, sint totam eius omnis? Eius est provident amet facere, dicta ab ducimus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus pariatur, quas rerum blanditiis sunt hic aperiam reiciendis autem porro labore ea distinctio maiores laboriosam optio numquam unde saepe adipisci nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reiciendis earum at beatae consequuntur tempora voluptate, impedit repudiandae laboriosam iusto corrupti. Similique ab, tenetur magni provident rerum debitis accusamus facere!</p>
             </div>
             <div class="contenido__equipo-foto">
-                <img src="../assets/img/equipo.jpg" class="img-rounded" alt="equipo" width="500px">
-                <!--NO FUNCIONÓ class="img-rounded"-->
+                <img src="../assets/img/equipo.jpg" alt="equipo" width="500px">
             </div>
         </section>
     </main>
