--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -56,7 +56,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11"></div>
-            <h1 class="titulo">NUESTROS SERVICIOS</h1>
+            <title class="titulo">NUESTROS SERVICIOS</title>
             <p class="subtitulo">Diseño y decoración de interiores y espacios</p>
             <div class="col-mg- col-lg-1"></div>
         </section>
