--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11">
-                <h1 class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
+                <title class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE<title>
                 <p class="subtitulo">Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
             </div>
             <div class="col-mg- col-lg-1"></div>
