--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -55,7 +55,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11">
-                <title class="titulo">EL DETRÁS DE ESCENA</title>
+                <h1 class="titulo">EL DETRÁS DE ESCENA ¿Quiénes somos?</h1>
                 <p class="subtitulo">Somos un estudio de diseño de interiores radicado en la ciudad de Villa Carlos Paz, Córdoba, Argentina.</p>
                 <div class="col-mg- col-lg-1"></div>
             </div>
