--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DK.Interiores</title>
+    <title>DK.Interiores - Diseño y decoración de interiores</title>
+    <meta name= "description=" content="DK.Interiores es un estudio que integra múltiples servicios de diseño, decoración e interiorismo. 
+    Nuestra misión está enraizada en crear sensaciones positivas en los espacios en los que habitamos gran parte de nuestra vida">
     <!--CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -57,7 +59,7 @@
         <!--INTRO A LA PÁGINA-->
         <div class="container">
             <div class="col-mg- col-lg-8">
-            <title class="titulo">DISEÑOS SIMPLES Y ELEGANTES</title>
+            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
             <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
             </div>
             <div class="col-mg- col-lg-2"></div>
