--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DK.Interiores / Blog</title>
+    <title>DK.Interiores / Blog - Artículos, Consejos, Tendencias<title>
     <!--CSS-->
     <!--CLASES CORREGIDAS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -56,7 +56,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-lg-11"></div>
-            <title class="titulo">¡TODOS LOS CONSEJOS QUE NECESITÁS!</title>
+            <h1 class="titulo">¡TODOS LOS CONSEJOS QUE NECESITÁS!</h1>
             <p class="subtitulo">En esta sección te contamos todos nuestros tips para que puedas integrar el diseño de interiores en tu día a día</p>
             <div class="col-lg-1"></div>
         </section>
