--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DK.Interiores / Contacto</title>
+    <title>DK.Interiores / Contacto - Córdoba, Argentina</title>
     <!--CSS-->
     <!--CLASES CORREGIDAS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -56,7 +56,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11">
-                <title class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE<title>
+                <h1 class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
                 <p class="subtitulo">Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
             </div>
             <div class="col-mg- col-lg-1"></div>
