--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DK.Interiores / Servicios</title>
+    <title>DK.Interiores / Servicios - Hogar, Oficinas, Muebles, Eventos </title>
     <!--CSS-->
     <!--CLASES CORREGIDAS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -56,7 +56,7 @@
         <!--INTRO A LA PÁGINA-->
         <section class="container">
             <div class="col-mg- col-lg-11"></div>
-            <title class="titulo">NUESTROS SERVICIOS</title>
+            <h1 class="titulo">NUESTROS SERVICIOS ¿Qué ofrecemos?</h1>
             <p class="subtitulo">Diseño y decoración de interiores y espacios</p>
             <div class="col-mg- col-lg-1"></div>
         </section>
