--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores / Servicios - Hogar, Oficinas, Muebles, Eventos </title>
-    <!--CSS-->
-    <!--CLASES CORREGIDAS-->
+    <meta name= "description=" content="DK.Interiores es un estudio que integra múltiples servicios de diseño, decoración e interiorismo. 
+    Nuestra misión está enraizada en crear sensaciones positivas en los espacios en los que habitamos gran parte de nuestra vida">
+    <!--CSS/SCSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
