--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -66,8 +66,9 @@
         <section class="container contenido__equipo">
             <div class="row"></div>
             <div class="contenido__equipo--presentacion">
-                <p class="subtitulo color-blanco">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus vel sed, commodi exercitationem harum atque, alias rem iusto, sint totam eius omnis? Eius est provident amet facere, dicta ab ducimus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus pariatur, quas rerum blanditiis sunt hic aperiam reiciendis autem porro labore ea distinctio maiores laboriosam optio numquam unde saepe adipisci nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reiciendis earum at beatae consequuntur tempora voluptate, impedit repudiandae laboriosam iusto corrupti. Similique ab, tenetur magni provident rerum debitis accusamus facere!</p>
             </div>
+            <p class="subtitulo color-blanco">Es momento de presentarnos... Somos Daniela y Melina, madre e hija, ambas apasionadas por el diseño y la estética en distintas ramas: desde lo digital hasta el interiorismo. 
+                Sabemos que si llegaste hasta acá es porque seguramente algo de esto último te interesa para vos y es justamente ahí donde podemos ayudarte</p>
             <div class="contenido__equipo-foto">
                 <img src="../assets/img/equipo.jpg" alt="equipo" width="500px">
             </div>
