--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -67,7 +67,8 @@
             <div class="row"></div>
             <div class="contenido__equipo--presentacion">
             </div>
-            <p class="subtitulo color-blanco">Es momento de presentarnos... Somos Daniela y Melina, madre e hija, ambas apasionadas por el diseño y la estética en distintas ramas: desde lo digital hasta el interiorismo. 
+            <p class="subtitulo color-blanco">Es momento de presentarnos... <br>
+                Somos Daniela y Melina, madre e hija, ambas apasionadas por el diseño y la estética en distintas ramas: desde lo digital hasta el interiorismo. 
                 Sabemos que si llegaste hasta acá es porque seguramente algo de esto último te interesa para vos y es justamente ahí donde podemos ayudarte</p>
             <div class="contenido__equipo-foto">
                 <img src="../assets/img/equipo.jpg" alt="equipo" width="500px">
